TODO

add test with tdhock/changepoint-data-structure/figure-loss-small.R --
right now it works with update_axes but if I add clickSelects it stops
working (but it should still work).

support variable mapping and scales that can the user can
interactively update.

OPTIMIZATION: for the prostateLasso test, it would be great to be able
to specify clickSelects=c(arclength="arclength.click") even if there
is no column named arclength in the data -- this would mean to update
the selector called "arclength" with the value in column
"arclength.click" -- less disk space, and faster compiling.

2019.6.6 PR#27

animint(out.dir="path/to/dir") is respected by print.animint

2019.6.4

bugfix for facet_grid(scales/space="free")

bugfix for update_axes with geom_abline

bugfix for graph height computation, which only showed up when there
were lots of rows in the facet spec.

2018.12.14 

animint fun, export print method.

infinite values converted to range min/max before saving tsv files.

2018.10.4

DEP: no longer depend on any branch of ggplot2.

train_layout from ggplot2 - R/panel.r function is now
g_train_layout. train_layout from animint2 - R/z_facet.R function is
the same. Both are internal functions.

2017.08.24

DSL: clickSelects/showSelected are now specified as parameters rather
than aesthetics.